--- a/_posts/features.mdx
+++ b/_posts/features.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Features"
-description: "Features of CornDocs"
-banner: "/images/corndocs.jpeg"
+description: "Features of ShastraOS"
+banner: "/images/screenshot2.jpeg"
 tags: ["Documentation"]
 date: 6 October 2022
 position: 2
