--- a/_posts/getting-started.mdx
+++ b/_posts/getting-started.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started"
-description: "Getting started with CornDocs"
-banner: "/images/corndocs.jpeg"
+description: "Getting started with ShastraOS"
+banner: "/images/screenshot3.jpeg"
 tags: ["Documentation"]
 date: 1 October 2022
 position: 1
