--- a/_posts/made-with-corndocs.mdx
+++ b/_posts/made-with-corndocs.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Made With"
-description: "Made with CornDocs"
+description: "Made with Love"
 tags: ["Made With"]
 date: 14 October 2022
 position: 3
 ---
 
-# Made with CornDocs
+# Made with Love
 
 | Product                                | Description                      |
 | -------------------------------------- | -------------------------------- |
